--- a/index.ipynb
+++ b/index.ipynb
@@ -111,7 +111,7 @@
    "source": [
     "In programming terms, we say that we just declared a variable, `email`, and assigned it to the string, `\"art.vandelay@vandelay.co\"`.  To do so, we'll follow the procedure below:\n",
     "\n",
-    "    variable = data\n",
+    "    variable = \n",
     "\n",
     "Now that we have assigned a variable `email` to a string, we just type the word `email` to see the string again. "
    ]
